# swissgeol-boreholes-dataextraction

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.aws.lamdba  For_Developers.md  LICENSE  README.API_and_Docker.md  README.For_Developers.md  README.groundtruth-json.md  README.md  README.predictions-json.md  deploy_api_aws_lambda.sh  deploy_api_aws_lamdba.sh  diff_spotter.py  dummy.md  environment-dev.yml  environment-prod.yml  publiccode.yml  pyproject.toml  pytest-coverage.txt  pytest.xml  requirements.txt  setup.py
.github/actions/python-package-summary/: action.yml
.github/scripts/: find-version.js
.github/workflows/: pipeline_run.yml  pre-commit.yml  pre-release.yml  publish-edge-package.yml  publish-edge.yml  publish-package.yml  publish-pre-release-package.yml  pytest.yml  release.yml
config/: bert_config.yml  bert_config_lithology.yml  classification_params.yml  classification_params_v1.yml  classification_params_v3.yml  classification_params_v4.yml  classification_params_v5.yml  classification_prompts.yml  classification_prompts_reasoning.yml  classification_prompts_reasoning_v1.yml  classification_prompts_reasoning_v4.yml  classification_prompts_reasoning_v5.yml  classification_prompts_reasoning_v6.yml  classification_prompts_v2.yml  classification_prompts_v3.yml  classification_prompts_v4.yml  classification_prompts_v7.yml  classifier_config_paths.yml  language_resources.yml  lexic_lithology_classification_params.yml  line_detection_params.yml  lithology_classification_params.yml  matching_params.yml  name_detection_params.yml  striplog_detection_params.yml  table_detection_params.yml
config/baseline/: baseline_config_lithology.yml
config/bedrock/: bedrock_config.yml  bedrock_config_en.yml  bedrock_config_en_main.yml  bedrock_config_lithology.yml  bedrock_config_uscs.yml  classification_patterns_bedrock.yml  classification_prompts.yml  en_classification_patterns_bedrock.yml  en_classification_prompts.yml  en_main_classification_prompts.yml  lithology_classification_prompts.yml  uscs_classification_prompts.yml
config/bert/: bert_config_en.yml  bert_config_en_main.yml  bert_config_lithology.yml  bert_config_unconsolidated.yml
docs/: API_and_Docker.md  CICD.md  For_Developers.md  README.API_and_Docker.md  README.For_Developers.md  groundtruth-json.md  predictions-json.md  train_BERT.md
example/: example_groundtruth.json  example_gw_groundtruth.json  example_layers_groundtruth.json
models/backbone/: backbone.safetensors
models/en_main_head/: config.json  model.safetensors  tokenizer.json
models/lithology_head/: config.json  model.safetensors  tokenizer_config.json
notebooks/: Borehole_Profile_V2_Exploration.ipynb
src/app/: main.py
src/app/api/: __init__.py
src/app/common/: __init__.py  aws.py  config.py  coordinates.py  helpers.py  log.py  schemas.py
src/borehole_extraction/: main.py
src/borehole_extraction/annotations/: draw.py  plot_utils.py
src/borehole_extraction/evaluation/: evaluation_dataclasses.py  groundwater_evaluator.py  layer_evaluator.py  metadata_evaluator.py  utility.py
src/borehole_extraction/extraction/: extract.py
src/classification/: main.py  runner.py
src/classification/classifiers/: aws_bedrock_classifier.py  baseline_classifier.py  bert_classifier.py  classifier.py  classifier_factory.py  classifier_protocol.py  classifiers.py  dummy_classifier.py
src/classification/config/: classification_params.yml  classifier_config_paths.yml
src/classification/evaluation/: evaluate.py
src/classification/models/: config.json  model.py  train.py
src/classification/utils/: __init__.py  benchmark_utils.py  classification_classes.py  data_formatter.py  data_loader.py  data_utils.py  enum_class.py  file_utils.py  lithology_classes.py
src/core/: __init__.py  benchmark_utils.py  mlflow_tracking.py  mlflow_utils.py  pipeline_runner.py
src/description_classification/: main.py
src/description_classification/classifiers/: aws_bedrock_classifier.py  baseline_classifier.py  bedrock_classifier.py  bert_classifier.py  classifier_protocol.py  classifiers.py  dummy_classifier.py
src/description_classification/evaluation/: evaluate.py
src/description_classification/models/: model.py  train.py
src/description_classification/utils/: data_loader.py  data_utils.py  language_detection.py  (+1 more)
src/extraction/: __init__.py  main.py  minimal_pipeline.py  runner.py
src/general_utils/: file_utils.py
src/scripts/: convert_ground_truth.py  convert_ground_truth_v2.py  convert_pdf_to_png.py  create_json_subset.py  create_nagra_subset.py  deskew_pdf.py  get_files.py  label_studio_annotation_to_ground_truth.py  load_csv_to_yaml.py  load_rdf_to_csv.py  load_rdf_to_jsonld.py  quick_compare.py  split_dataset.py  split_layers.py  split_lithology_data.py  transform_yaml_lithology_patterns.py  transform_yaml_patterns.py
src/stratigraphy/: __init__.py  extract.py  get_files.py  line_detection.py  main.py
src/swissgeol_doc_processing/: __init__.py
src/utils/: benchmark_utils.py  dynamic_matching.py  file_utils.py  language_detection.py  language_filtering.py  mlflow_tracking.py
tests/: conftest.py  test_aabovebsidebar.py  test_api.py  test_benchmark.py  test_continuation_detection.py  test_coordinate_extraction.py  test_create_pngs.py  test_data_extraction_from_bbox.py  test_dataclasses.py  test_depthcolumn.py  test_depthcolumnentry.py  test_extraction_io.py  test_find_depth_columns.py  test_find_descripton.py  test_find_sidebar.py  test_geometric_line_utilities.py  test_geometry_dataclasses.py  test_groundwater.py  test_groundwater_symbol_detection.py  test_interval.py  test_interval_block_pair.py  test_interval_block_pairs.py  test_language_detection.py  test_language_filtering.py  test_layer_evaluator.py  test_layer_identifier_sidebar.py  test_layerdepths.py  test_line_affinity.py  test_overlap_detection.py  test_predictions.py  test_protocolsidebar.py  test_striplog.py  test_textblock.py  test_textline_matching.py
tests/classification/: test_data_formatter.py  test_evaluation.py
(+338 files in other folders)
