[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "swissgeol-boreholes-dataextraction"
version = "0.0.1-dev"
description = "Python project to analyse borehole profiles."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3",
    "pandas",
    "levenshtein",
    "python-dotenv",
    "setuptools",
    "tqdm",
    "fastapi",
    "uvicorn",
    "pydantic_settings",
    "pydantic",
    "httpx",
    "moto",
    "pillow",
    "mangum",
    "awslambdaric",
    "scikit-learn>=1.4.0",
    "click>=8.0.0",
    "PyYAML>=6.0.1",
    "langdetect>=1.0.9",
    "regex",
    "backoff",
    "PyMuPDF>=1.25.4",
    "opencv-python-headless",
    "quads>=1.1.0",
    "numpy<2",
    "rtree",
    "nltk",
    "transformers",
    "datasets",
    "torch",
    "accelerate",
    "rdflib",
    "pyinstrument==5.0.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0"
]
lint = [
    "pre-commit==3.6.2",
]
experiment-tracking = [
    "mlflow==2.22.0",
    "pygit2"
]
visualize = [
    "matplotlib==3.8.0"
]
devtools = [
    "tqdm"
]
groundwater-illustration-matching = [
    "scikit-image==0.24.0"
]

all = ["swissgeol-boreholes-dataextraction[test, lint, experiment-tracking, visualize, devtools, groundwater-illustration-matching]"]

[project.scripts]
boreholes-extract-all = "extraction.main:click_pipeline"
boreholes-extract-metadata = "extraction.main:click_pipeline_metadata"
boreholes-download-profiles = "scripts.get_files:download_directory_froms3"
boreholes-score = "extraction.evaluation.benchmark.score:main"
boreholes-classify-descriptions = "classification.main:click_pipeline"
fine-tune-bert = "classification.models.train:train_model"

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "D102",  # Missing docstring in a public method
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in `__init__`
    ]

[tool.ruff]
line-length = 119

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
# Some deprecation warnings come from external libraries (botocore and SWIG). Since we can’t fix these in our code,
# they are now ignored during test runs to keep the output clean. Link to the existing issues:
# SWIG: https://github.com/pymupdf/PyMuPDF/issues/3931
# boto3: https://github.com/boto/boto3/issues/3889
filterwarnings = [
    "ignore:.*Swig.*has no __module__ attribute:DeprecationWarning",
    "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore"
]